docs: add umi-plugin notes

--- a/website/docs/examples/umi/v3.md
+++ b/website/docs/examples/umi/v3.md
@@ -3,3 +3,93 @@ sidebar_position: 2
 title: v3
 ---
 
+```mdx-code-block
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+```
+
+This example shows how to apply `stillness-component` in umi3.x, by rewriting the underlying rendering plugin, to transform `switch` to achieve a consistent effect
+
+Now that this is a public package, all that is needed is:
+
+````mdx-code-block
+<Tabs>
+<TabItem value="yarn">
+
+```bash
+yarn add umi-plugin-stillness
+```
+
+</TabItem>
+<TabItem value="npm">
+
+```bash
+npm install umi-plugin-stillness
+```
+
+</TabItem>
+<TabItem value="pnpm">
+
+```bash
+pnpm add umi-plugin-stillness
+```
+
+</TabItem>
+</Tabs>
+````
+
+Among them, because of some modification to `IRoute`, when **routes** has `stillness` in it, it will become a cached page
+
+Usage Notes:
+
+```js title=".umirc.ts"
+import { defineConfig } from 'umi';
+
+export default defineConfig({
+  nodeModulesTransform: {
+    type: 'none',
+  },
+  routes: [
+    {
+      exact: false,
+      path: '/',
+      component: '@/layouts/index',
+      routes: [
+        {
+          exact: false,
+          path: '/home',
+          component: '@/pages/home',
+          // highlight-next-line
+          stillness: true,
+          routes: [
+            {
+              path: '/home/a',
+              component: '@/pages/a',
+              // highlight-next-line
+              stillness: true,
+            },
+          ],
+        },
+        // highlight-next-line
+        { path: '/about', component: '@/pages/about', stillness: true },
+        { path: '/list', component: '@/pages/list' },
+      ],
+    },
+  ],
+  // highlight-next-line
+  stillness: {},
+});
+```
+
+Also, the `stillness-component` common api has been imported directly via `umi`:
+
+```jsx
+import { Offscreen,StillnessIRoute } from 'umi';
+```
+
+<iframe src="https://codesandbox.io/embed/05-example-umi-v3-plugin-puubqt?fontsize=14&hidenavigation=1&theme=dark&view=preview"
+     style={{width:"100%",height:"500px",border:0, borderRadius: "4px", overflow:"hidden"}}
+     title="05-example-umi-v3-plugin"
+     allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+     sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
+   ></iframe>
