--- a/website/i18n/zh-CN/docusaurus-plugin-content-docs/current/examples/umi/v3.md
+++ b/website/i18n/zh-CN/docusaurus-plugin-content-docs/current/examples/umi/v3.md
@@ -87,3 +87,9 @@ export default defineConfig({
 import { Offscreen,StillnessIRoute } from 'umi';
 ```
 
+<iframe src="https://codesandbox.io/embed/05-example-umi-v3-plugin-puubqt?fontsize=14&hidenavigation=1&theme=dark&view=preview"
+     style={{width:"100%",height:"500px",border:0, borderRadius: "4px", overflow:"hidden"}}
+     title="05-example-umi-v3-plugin"
+     allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+     sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
+   ></iframe>
