--- a/website/i18n/zh-CN/docusaurus-plugin-content-blog/options.json
+++ b/website/i18n/zh-CN/docusaurus-plugin-content-blog/options.json
@@ -8,7 +8,7 @@
     "description": "The description for the blog used in SEO"
   },
   "sidebar.title": {
-    "message": "Recent posts",
+    "message": "文章列表",
     "description": "The label for the left sidebar"
   }
 }
